
BALANCING:
- Cooked veggies can be added to salad & cold pasta - DONE!!!
- Hot pasta can be made with broths - DONE!!!
- Cooked pasta can be added to stews - DONE!!!

BUG FIXES:
- Apple visuals in muffin/fruit dough fixed - DONE!!!
- Broth has proper text when in stews/soups
- Au gratin not displaying cheese visuals fixed - DONE!!!
- Fruit bar apple overlay visuals fixed - DONE!!!

MISC: 
- Dialogue added to Kitchenware Trader; readjusted code to push text to en.json
- Candle recipes updated (waiting on More Candles)

- New 1.20 clays integrated
- Chef hat + saddle makes Chef Saddle

Vityuri suggestions:
- Pickled and cooked vegetable for required ingredients in soup. Many cuisines have preserved pickled vegetable in soup. Like sichuan fish soup with pickled mustard greens, polish pickle soup.
- Fried meat, dried fruit, cooked vegetables, and broth in pilaf. There are so many types of pilaf, and it is often rice mixed with cooked food. Food on rice is a staple dish in many places, maybe have it a mixing meal (?)
- Cooked meat, vegetables as pie filling. Also boiled and pickled eggs in pies. Sliced boiled eggs are used in curry puff too.
- Eggs and also cooked vegetables in dumplings. Scrambled eggs and chinese chives are a common filling in dumplings.
- Eggs and soy sauce in porridge. Few drops of that can be added when eating congee, a type of porridge.
- Peanut sauce, cooked vegetables in salads
- Grubs can be added as optional protein in some food like dumplings and meals like porridge.
- Fried grubs and termites
- Fried dumplings. Adding toppings on cooked dumplings like how breaded food has the deluxe version.
- Egg pudding and bread pudding  (optional alcohol)



1.7.3
- Wildcraft stuff:
-- Patches updated to new file paths
-- Handbook crashing fixed

BALANCING:
- Cottage cheese mixing bowl recipe added (vinegar + pasteruized milk)
- Liquid gelatin and pre-gelatin no longer allowed in fruit bar or muffin recipes

1.20 UPDATES: