@@ -314,6 +314,72 @@
     "file": "itemtypes/food/vegetable.json"
   },
   {
+    "op": "addmerge",
+    "path": "/attributesByType/*-onion/bakingProperties",
+    "value": {
+      "temp": 100,
+      "levelFrom": 0.0,
+      "levelTo": 0.25,
+      "startScaleY": 1.0,
+      "endScaleY": 1.0,
+      "resultCode": "expandedfoods:cookedveggie-onion-partbaked"
+    },
+    "side": "server",
+    "file": "itemtypes/food/vegetable.json"
+  },
+  {
+    "op": "addmerge",
+    "path": "/attributesByType/*-onion/juiceableProperties",
+    "value": {
+      "litresPerItem": 0.3125,
+      "liquidStack": {
+        "type": "item",
+        "code": "expandedfoods:vegetablejuiceportion-onion",
+        "stacksize": 1
+      },
+      "pressedStack": {
+        "type": "item",
+        "code": "game:pressedmash-onion",
+        "stacksize": 1
+      }
+    },
+    "side": "server",
+    "file": "itemtypes/food/vegetable.json"
+  },
+  {
+    "op": "addmerge",
+    "path": "/attributesByType/*-bellpepper/bakingProperties",
+    "value": {
+      "temp": 100,
+      "levelFrom": 0.0,
+      "levelTo": 0.25,
+      "startScaleY": 1.0,
+      "endScaleY": 1.0,
+      "resultCode": "expandedfoods:cookedveggie-bellpepper-partbaked"
+    },
+    "side": "server",
+    "file": "itemtypes/food/vegetable.json"
+  },
+  {
+    "op": "addmerge",
+    "path": "/attributesByType/*-bellpepper/juiceableProperties",
+    "value": {
+      "litresPerItem": 0.3125,
+      "liquidStack": {
+        "type": "item",
+        "code": "expandedfoods:vegetablejuiceportion-bellpepper",
+        "stacksize": 1
+      },
+      "pressedStack": {
+        "type": "item",
+        "code": "game:pressedmash-bellpepper",
+        "stacksize": 1
+      }
+    },
+    "side": "server",
+    "file": "itemtypes/food/vegetable.json"
+  },
+  {
     "op": "remove",
     "path": "/variantgroups/0/states/5",
     "side": "server",
