@@ -85,13 +85,17 @@ BUG FIXES:
 - Broth has proper text when in stews/soups
 - Au gratin not displaying cheese visuals fixed - DONE!!!
 - Fruit bar apple overlay visuals fixed - DONE!!!
+- Chopped mushroom transforms fixed
+- Onion & bellpepper goes into oven and fruit press properly - DONE!!!
 
 MISC: 
 - Dialogue added to Kitchenware Trader; readjusted code to push text to en.json
 - Candle recipes updated (waiting on More Candles)
+- Liquid lard & resin now harden and dump out into solids
 
 - New 1.20 clays integrated
 - Chef hat + saddle makes Chef Saddle
+- Rolling pin tool rack transform fixed; now actually in the rack
 
 Vityuri suggestions:
 - Pickled and cooked vegetable for required ingredients in soup. Many cuisines have preserved pickled vegetable in soup. Like sichuan fish soup with pickled mustard greens, polish pickle soup.
